<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    tools:context=".ui.bmr.BmrFragment">

    <LinearLayout
        android:id="@+id/home_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_bmr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_your_bmr"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_height_placeholder"
            android:labelFor="@id/inputHeight" />
        <EditText
            android:id="@+id/inputHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:digits="0123456789"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_weight_placeholder"
            android:labelFor="@id/inputWeight" />
        <EditText
            android:id="@+id/inputWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:digits="0123456789"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_age_placeholder"
            android:labelFor="@id/inputAge" />
        <EditText
            android:id="@+id/inputAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:digits="0123456789"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_gender_placeholder"
            android:labelFor="@id/radioGender" />
        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_female" />

        </RadioGroup>

        <Spinner
            android:id="@+id/activity_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/activities"
            android:spinnerMode="dropdown"
            android:prompt="@string/activity_prompt" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/reset_button" />

        <LinearLayout
            android:id="@+id/resultComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/result_bmr_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_head_bmr"
                android:textAlignment="center"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/result_bmr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/result_tee_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_head_tee"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/result_tee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>